--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1858,11 +1858,13 @@ macos_quit_when_last_window_closed yes
 
 #: Scrolling {{{
 
-# Use page up/down to scroll when not in an application buffer
+# Use [shift] page up/down to scroll when not in an application buffer
 # I remap c+s+pgup/dn to switching tabs
 # https://github.com/yurikhan/kitty-smart-scroll
 map page_up   kitten smart_scroll.py scroll_page_up   page_up
 map page_down kitten smart_scroll.py scroll_page_down page_down
+map shift+page_up   kitten smart_scroll.py scroll_page_up   shift+page_up
+map shift+page_down kitten smart_scroll.py scroll_page_down shift+page_down
 
 
 #: Scroll line up
