kitty: tab/window shortcuts, index in tab title

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1048,7 +1048,7 @@ tab_bar_style powerline
 #: The maximum number of cells that can be used to render the text in
 #: a tab. A value of zero means that no limit is applied.
 
-# tab_title_template "{fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{title}"
+tab_title_template "{fmt.fg.red}{bell_symbol}{activity_symbol}{fmt.fg.tab}{index} {title}"
 
 #: A template to render the tab title. The default just renders the
 #: title with optional symbols for bell and activity. If you wish to
@@ -1958,7 +1958,7 @@ map shift+page_down kitten smart_scroll.py scroll_page_down shift+page_down
 
 #: New window
 
-# map kitty_mod+enter new_window
+map kitty_mod+enter new_window_with_cwd
 # map cmd+enter       new_window
 
 #::  You can open a new kitty window running an arbitrary program, for
@@ -2004,10 +2004,12 @@ map shift+page_down kitten smart_scroll.py scroll_page_down shift+page_down
 #: Next window
 
 # map kitty_mod+] next_window
+map kitty_mod+' next_window
 
 #: Previous window
 
 # map kitty_mod+[ previous_window
+map kitty_mod+; next_window
 
 #: Move window forward
 
@@ -2100,14 +2102,14 @@ map shift+page_down kitten smart_scroll.py scroll_page_down shift+page_down
 # map kitty_mod+right next_tab
 # map shift+cmd+]     next_tab
 # map ctrl+tab        next_tab
-map kitty_mod+page_down next_tab
+map kitty_mod+] next_tab
 
 #: Previous tab
 
 # map kitty_mod+left previous_tab
 # map shift+cmd+[    previous_tab
 # map ctrl+shift+tab previous_tab
-map kitty_mod+page_up previous_tab
+map kitty_mod+[ previous_tab
 
 #: New tab
 
@@ -2490,7 +2492,7 @@ include current-theme.conf
 
 
 # BEGIN_KITTY_FONTS
-font_family      family="Fira Cousine"
+font_family      family="Liga Cousine"
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
