kitty: start custom tab bar

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -972,7 +972,7 @@ tab_bar_margin_width 5.0
 #: The second number is the margin between the tab bar and the
 #: contents of the current tab.
 
-tab_bar_style powerline
+tab_bar_style custom
 
 #: The tab bar style, can be one of:
 
