kitty: os specific configs (and fix link to support)

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -23,7 +23,8 @@
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 8.7
+# Overridden in OS specific config
+font_size 9
 
 #: Font size (in pts)
 
@@ -2484,6 +2485,7 @@ map ctrl+alt+0 goto_tab 10
 
 #: }}}
 
+include conf.d/${KITTY_OS}.conf
 
 # BEGIN_KITTY_THEME
 # Gruvbox Dark
