--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,6 +1,6 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
-#: Fonts {{{
+#: Fonts {{
 
 #: kitty has very powerful font management. You can configure
 #: individual font faces and even specify special fonts for particular
@@ -787,7 +787,7 @@ font_size 9
 #: suffix of "c" on the width/height values to have them interpreted
 #: as number of cells instead of pixels.
 
-# enabled_layouts *
+enabled_layouts splits:split_axis=horizontal,stack,tall
 
 #: The enabled window layouts. A comma separated list of layout names.
 #: The special value all means all layouts. The first listed layout
@@ -871,7 +871,7 @@ font_size 9
 #: The color for the border of inactive windows in which a bell has
 #: occurred.
 
-# inactive_text_alpha 1.0
+inactive_text_alpha 0.5
 
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
@@ -1004,7 +1004,7 @@ tab_bar_style custom
 #: The horizontal alignment of the tab bar, can be one of: left,
 #: center, right.
 
-# tab_bar_min_tabs 2
+tab_bar_min_tabs 1
 
 #: The minimum number of tabs that must exist before the tab bar is
 #: shown.
@@ -1031,7 +1031,7 @@ tab_bar_style custom
 #: The separator between tabs in the tab bar when using separator as
 #: the tab_bar_style.
 
-# tab_powerline_style angled
+tab_powerline_style slanted
 
 #: The powerline separator style between tabs in the tab bar when
 #: using powerline as the tab_bar_style, can be one of: angled,
@@ -1988,6 +1988,21 @@ map kitty_mod+enter new_window_with_cwd
 #::  For more details, see launch
 #::  <https://sw.kovidgoyal.net/kitty/launch/>.
 
+#: Helpful with splits layout
+map f5 launch --location=vsplit --cwd=current
+map f6 launch --location=hsplit --cwd=current
+map f7 layout_action rotate
+
+map kitty_mod+left neighboring_window left
+map kitty_mod+right neighboring_window right
+map kitty_mod+up neighboring_window up
+map kitty_mod+down neighboring_window down
+
+map kitty_mod+cmd+up move_window up
+map kitty_mod+cmd+left move_window left
+map kitty_mod+cmd+right move_window right
+map kitty_mod+cmd+down move_window down
+
 #: New OS window
 
 # map kitty_mod+n new_os_window
@@ -2010,7 +2025,7 @@ map kitty_mod+' next_window
 #: Previous window
 
 # map kitty_mod+[ previous_window
-map kitty_mod+; next_window
+map kitty_mod+; previous_window
 
 #: Move window forward
 
